# unifi-tools

./: .coverage  .flake8  .gitignore  Dockerfile  Pipfile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: build.yml  coverage.yml  deploy.yml  deploy2.yml  test.yml
src/unifi_tools/: __init__.py  config.py  features.py  helpers.py  logging.py  run.py  unifi-switch-port.py  unifi.py  unifi_tools.py
src/unifi_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/unifi_tools/installer/etc/systemd/system/: unifi-tools.service
src/unifi_tools/installer/etc/unifi/: settings.yaml
src/unifi_tools/installer/unifi/: settings.yaml
src/unifi_tools/mqtt/: features.py
src/unifi_tools/mqtt/discovery/: binary_sensors.py  discover.py  switches.py
src/unifi_tools/plugins/: features.py
src/unifi_tools/plugins/hass/: binary_sensors.py  discover.py  switches.py
src/unifi_tools/plugins/unifi/: switch.py
tests/: .coverage  conftest.py  conftest_data.py
tests/unit/: test_unifi_api.py  test_unifi_api_data.py
tests/unit/unifi/: test_config.py  test_config_data.py  test_features.py  test_unifi_api.py  test_unifi_api_data.py  test_unifi_devices.py
tests/unittests/: test_config.py  test_config_data.py  test_features.py  test_unifi_api.py  test_unifi_api_data.py  test_unifi_devices.py  test_unifi_devices_data.py  test_unifi_tools.py  test_unifi_tools_data.py
tests/unittests/plugins/: test_features.py  test_features_data.py
tests/unittests/plugins/hass/: test_binary_sensors.py  test_switches.py
