[bdist_wheel]
universal = 0

[metadata]
name = unifi-tools
version = attr: unifi_tools.__version__
description = Control UniFi devices with MQTT commands.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mh-superbox/unifi-tools
author = Michael Hacker
author_email = mh@superbox.one
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    asyncio-mqtt~=0.12.1
    paho-mqtt~=1.6.1
    PyYAML~=6.0
    requests~=2.28.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    unifi-tools = unifi_tools.run:main

[flake8]
max-line-length = 120
max-complexity = 12

extend-ignore = D,E501,W503,W504
